du: fix emulator builds for pie
Change-Id: Ie4545f8150c7a8f86d0a108be8fbe80a435394e4

--- a/emulator/advancedFeatures.ini
+++ b/emulator/advancedFeatures.ini
@@ -3,5 +3,7 @@ GLDMA = on
 LogcatPipe = on
 GLAsyncSwap = on
 GLESDynamicVersion = on
-EncryptUserData = off
+EncryptUserData = on
 IntelPerformanceMonitoringUnit = on
+SystemAsRoot = on
+Wifi = on
